src/codegen/tests/snapshots/rusty__codegen__tests__compare_instructions_tests__compare_instruction_functions_with_different_types.snap
---
source: src/codegen/tests/compare_instructions_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { ptr, i16, i32, float, double, i8, i16, i32, i64, i8, i16, i32, i64 }

@main_instance = global %main zeroinitializer

define float @foo() {
entry:
  %foo = alloca float, align [filtered]
  store float 0.000000e+00, ptr %foo, align [filtered]
  %foo_ret = load float, ptr %foo, align [filtered]
  ret float %foo_ret
}

define void @main(ptr %0) {
entry:
  %ptr_float = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %a = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 1
  %b = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 2
  %var_real = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 3
  %var_lreal = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 4
  %var_sint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 5
  %var_int = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 6
  %var_dint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 7
  %var_lint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 8
  %var_usint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 9
  %var_uint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 10
  %var_udint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 11
  %var_ulint = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 12
  store ptr %var_real, ptr %ptr_float, align [filtered]
  %load_var_sint = load i8, ptr %var_sint, align [filtered]
  %1 = sext i8 %load_var_sint to i32
  %load_var_dint = load i32, ptr %var_dint, align [filtered]
  %tmpVar = icmp eq i32 %1, %load_var_dint
  %2 = zext i1 %tmpVar to i8
  %load_var_lreal = load double, ptr %var_lreal, align [filtered]
  %tmpVar1 = fcmp ogt double 1.050000e+01, %load_var_lreal
  %3 = zext i1 %tmpVar1 to i8
  %load_var_usint = load i8, ptr %var_usint, align [filtered]
  %4 = zext i8 %load_var_usint to i32
  %load_var_udint = load i32, ptr %var_udint, align [filtered]
  %tmpVar2 = icmp ne i32 %4, %load_var_udint
  %5 = zext i1 %tmpVar2 to i8
  %load_var_uint = load i16, ptr %var_uint, align [filtered]
  %6 = zext i16 %load_var_uint to i32
  %tmpVar3 = icmp ule i32 %6, 40
  %7 = zext i1 %tmpVar3 to i8
  %load_var_ulint = load i64, ptr %var_ulint, align [filtered]
  %tmpVar4 = icmp uge i64 10, %load_var_ulint
  %8 = zext i1 %tmpVar4 to i8
  %load_var_sint5 = load i8, ptr %var_sint, align [filtered]
  %9 = sext i8 %load_var_sint5 to i32
  %load_var_usint6 = load i8, ptr %var_usint, align [filtered]
  %10 = zext i8 %load_var_usint6 to i32
  %tmpVar7 = icmp eq i32 %9, %10
  %11 = zext i1 %tmpVar7 to i8
  %load_var_uint8 = load i16, ptr %var_uint, align [filtered]
  %12 = zext i16 %load_var_uint8 to i64
  %load_var_lint = load i64, ptr %var_lint, align [filtered]
  %tmpVar9 = icmp sle i64 %12, %load_var_lint
  %13 = zext i1 %tmpVar9 to i8
  %load_var_dint10 = load i32, ptr %var_dint, align [filtered]
  %14 = sext i32 %load_var_dint10 to i64
  %load_var_ulint11 = load i64, ptr %var_ulint, align [filtered]
  %tmpVar12 = icmp uge i64 %14, %load_var_ulint11
  %15 = zext i1 %tmpVar12 to i8
  %load_var_lint13 = load i64, ptr %var_lint, align [filtered]
  %load_a = load i16, ptr %a, align [filtered]
  %16 = sext i16 %load_a to i64
  %tmpVar14 = icmp slt i64 %load_var_lint13, %16
  %17 = zext i1 %tmpVar14 to i8
  %load_a15 = load i16, ptr %a, align [filtered]
  %18 = sext i16 %load_a15 to i32
  %load_var_sint16 = load i8, ptr %var_sint, align [filtered]
  %19 = sext i8 %load_var_sint16 to i32
  %tmpVar17 = icmp sgt i32 %18, %19
  %20 = zext i1 %tmpVar17 to i8
  %load_b = load i32, ptr %b, align [filtered]
  %21 = sext i32 %load_b to i64
  %load_var_lint18 = load i64, ptr %var_lint, align [filtered]
  %tmpVar19 = icmp slt i64 %21, %load_var_lint18
  %22 = zext i1 %tmpVar19 to i8
  %load_b20 = load i32, ptr %b, align [filtered]
  %tmpVar21 = icmp ne i32 5, %load_b20
  %load_b22 = load i32, ptr %b, align [filtered]
  %tmpVar23 = icmp ne i32 %load_b22, 17
  %23 = and i1 %tmpVar21, %tmpVar23
  %24 = zext i1 %23 to i8
  %load_ptr_float = load ptr, ptr %ptr_float, align [filtered]
  %load_var_usint24 = load i8, ptr %var_usint, align [filtered]
  %25 = zext i8 %load_var_usint24 to i64
  %26 = ptrtoint ptr %load_ptr_float to i64
  %tmpVar25 = icmp sle i64 %26, %25
  %27 = zext i1 %tmpVar25 to i8
  %load_a26 = load i16, ptr %a, align [filtered]
  %28 = sext i16 %load_a26 to i64
  %load_ptr_float27 = load ptr, ptr %ptr_float, align [filtered]
  %29 = ptrtoint ptr %load_ptr_float27 to i64
  %tmpVar28 = icmp eq i64 %28, %29
  %30 = zext i1 %tmpVar28 to i8
  %call = call float @foo()
  %tmpVar29 = fcmp one float %call, 4.050000e+01
  %31 = zext i1 %tmpVar29 to i8
  %load_var_udint30 = load i32, ptr %var_udint, align [filtered]
  %32 = uitofp i32 %load_var_udint30 to float
  %call31 = call float @foo()
  %tmpVar32 = fcmp ole float %32, %call31
  %33 = zext i1 %tmpVar32 to i8
  %call33 = call float @foo()
  %34 = fpext float %call33 to double
  %load_var_lint34 = load i64, ptr %var_lint, align [filtered]
  %35 = sitofp i64 %load_var_lint34 to double
  %tmpVar35 = fcmp oeq double %34, %35
  %36 = zext i1 %tmpVar35 to i8
  ret void
}
