src/codegen/tests/snapshots/rusty__codegen__tests__compare_instructions_tests__string_less_with_constant_test.snap
---
source: src/codegen/tests/compare_instructions_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@utf08_literal_0 = private unnamed_addr constant [2 x i8] c"b\00"

define zeroext i8 @STRING_LESS(ptr %0, ptr %1) {
entry:
  %STRING_LESS = alloca i8, align [filtered]
  %op1 = alloca [1025 x i8], align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %op1, i8 0, i64 1025, i1 false)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %op1, ptr align [filtered] %0, i64 1024, i1 false)
  %op2 = alloca [1025 x i8], align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %op2, i8 0, i64 1025, i1 false)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %op2, ptr align [filtered] %1, i64 1024, i1 false)
  store i8 0, ptr %STRING_LESS, align [filtered]
  %STRING_LESS_ret = load i8, ptr %STRING_LESS, align [filtered]
  ret i8 %STRING_LESS_ret
}

define signext i16 @baz() {
entry:
  %baz = alloca i16, align [filtered]
  %a = alloca [81 x i8], align [filtered]
  %result = alloca i8, align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %a, i8 0, i64 ptrtoint (ptr getelementptr ([81 x i8], ptr null, i32 1) to i64), i1 false)
  store i8 0, ptr %result, align [filtered]
  store i16 0, ptr %baz, align [filtered]
  %call = call zeroext i8 @STRING_LESS(ptr %a, ptr @utf08_literal_0)
  store i8 %call, ptr %result, align [filtered]
  %baz_ret = load i16, ptr %baz, align [filtered]
  ret i16 %baz_ret
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #1

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
